# pack

./: .gitignore  .packignore  CMakeLists.txt  Cargo.toml  README.md  dub.json  main.cpp  pack-receive.service
.github/workflows/: qodana_code_quality.yml  test.yml
apps/pack/: main.cpp
libs/include/: KeyManager.hpp  Pack.hpp  Sender.hpp  Sync.hpp
libs/src/: KeyManager.cpp  Pack.cpp  Sender.cpp  Sync.cpp
src/: main.rs
tests/: main_test.cpp
